# BeautyCamera

./: README.md  build.gradle  gradle.properties  settings.gradle
BeautyFilter/: build.gradle
BeautyFilter/src/androidTest/java/com/frank/beautyfilter/: ExampleInstrumentedTest.java
BeautyFilter/src/main/: AndroidManifest.xml
BeautyFilter/src/main/cpp/: BeautyManager.cpp  CMakeLists.txt
BeautyFilter/src/main/cpp/beauty/: SimpleBeauty.cpp  SimpleBeauty.h
BeautyFilter/src/main/cpp/bitmap/: BitmapOperation.cpp  Conversion.h
BeautyFilter/src/main/java/com/frank/beautyfilter/: BeautyEngine.java  BeautyManager.java
BeautyFilter/src/main/jni/: Android.mk  Application.mk  BeautyManager.cpp
BeautyFilter/src/main/jni/beauty/: SimpleBeauty.cpp  SimpleBeauty.h
BeautyFilter/src/main/res/raw/: antique.glsl  beauty.glsl  breath_circle.glsl  calm.glsl  cool.glsl  crayon.glsl  romance.glsl  sketch.glsl  sunrise.glsl  sunset.glsl  tender.glsl  warm.glsl  whitecat.glsl
BeautyFilter/src/test/java/com/frank/beautyfilter/: ExampleUnitTest.java
OpenCVLibrary320/: build.gradle
OpenCVLibrary320/src/main/java/org/opencv/android/: AsyncServiceHelper.java  (+1 more)
OpenCVLibrary320/src/main/res/values/: strings.xml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/drawable/: btn_camera_shutter.xml  selector_filter_favorite.xml  selector_image_back.xml  selector_image_beauty.xml  selector_image_edit.xml  selector_image_filter.xml  selector_image_save.xml  take_filter_favorite_btn.xml
app/src/main/res/layout/: activity_beauty_camera.xml  activity_beauty_image.xml  activity_face_beauty.xml  activity_main.xml  filter_layout.xml  fragment_image_edit_adjust.xml  fragment_image_edit_beauty.xml  fragment_image_edit_filter.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
gradle/wrapper/: gradle-wrapper.properties
medialibrary/: build.gradle
medialibrary/src/main/: AndroidManifest.xml
medialibrary/src/main/cpp/: CMakeLists.txt  log_helper.h
medialibrary/src/main/cpp/FFmpegPlayer/: CMakeLists.txt
medialibrary/src/main/cpp/FFmpegPlayer/android/: FFMediaPlayer.cpp  FFmpegPlayer.cpp  FFmpegPlayer.h  com_frank_media_FFmpegPlayer.cpp
medialibrary/src/main/cpp/FFmpegPlayer/kernel/avsync/: AVSync.cpp
medialibrary/src/main/cpp/FFmpegPlayer/kernel/decoder/: AudioDecoder.cpp  MediaDecoder.cpp  MediaDecoder.h  VideoDecoder.cpp
medialibrary/src/main/cpp/FFmpegPlayer/kernel/player/: MediaPlayer.cpp  MediaPlayer.h  PlayerParam.cpp  PlayerParam.h
medialibrary/src/main/cpp/FFmpegPlayer/kernel/queue/: PacketQueue.h
medialibrary/src/main/cpp/FFmpegPlayer/kernel/render/: AudioRender.h
medialibrary/src/main/cpp/FFmpegPlayer/kernel/render/android/: NativeWindowVideoRender.h  OpenSLAudioRender.cpp
medialibrary/src/main/cpp/FFmpegPlayer/kernel/resample/: AudioResampler.cpp  AudioResampler.h
medialibrary/src/main/cpp/MediaPlayer/: CMakeLists.txt
medialibrary/src/main/cpp/MediaPlayer/android/: FFMediaPlayer.cpp  FFMediaPlayer.h  com_frank_media_FFMediaPlayer.cpp
medialibrary/src/main/cpp/MediaPlayer/include/soundtouch/: SoundTouchHelper.h
medialibrary/src/main/cpp/MediaPlayer/kernel/avsync/: AVSync.h
medialibrary/src/main/cpp/MediaPlayer/kernel/decoder/: AudioDecoder.h  MediaDecoder.h  VideoDecoder.cpp  VideoDecoder.h
medialibrary/src/main/cpp/MediaPlayer/kernel/message/: FFMessageQueue.cpp  FFMessageQueue.h
medialibrary/src/main/cpp/MediaPlayer/kernel/player/: MediaPlayer.cpp  MediaPlayer.h  PlayerParam.cpp  PlayerParam.h
medialibrary/src/main/cpp/MediaPlayer/kernel/queue/: PacketQueue.cpp
medialibrary/src/main/cpp/MediaPlayer/kernel/render/: VideoRender.h
medialibrary/src/main/cpp/MediaPlayer/kernel/render/android/: OpenSLAudioRender.cpp
medialibrary/src/main/cpp/MediaPlayer/source/avsync/: AVSync.cpp  AVSync.h  MediaClock.cpp  MediaClock.h
medialibrary/src/main/cpp/MediaPlayer/source/convertor/: AudioResampler.cpp  AudioResampler.h
medialibrary/src/main/cpp/MediaPlayer/source/decoder/: AudioDecoder.cpp  AudioDecoder.h  MediaDecoder.cpp  MediaDecoder.h  VideoDecoder.cpp  VideoDecoder.h
medialibrary/src/main/cpp/MediaPlayer/source/device/: AudioDevice.cpp  AudioDevice.h  NativeWindowVideoRender.cpp  NativeWindowVideoRender.h  VideoDevice.cpp  VideoDevice.h
medialibrary/src/main/cpp/MediaPlayer/source/device/android/: GLESDevice.cpp  GLESDevice.h  SLESDevice.cpp  SLESDevice.h
medialibrary/src/main/cpp/MediaPlayer/source/message/: FFMessageQueue.cpp  FFMessageQueue.h  MessageDefine.h
medialibrary/src/main/cpp/MediaPlayer/source/player/: MediaPlayer.cpp  MediaPlayer.h  PlayerParam.cpp  PlayerParam.h  PlayerState.cpp  PlayerState.h
medialibrary/src/main/cpp/MediaPlayer/source/queue/: FrameQueue.cpp  FrameQueue.h  PacketQueue.cpp
medialibrary/src/main/cpp/MediaPlayer/source/render/: AudioRender.cpp  AudioRender.h  NativeWindowVideoRender.cpp  NativeWindowVideoRender.h  OpenSLAudioRender.cpp  OpenSLAudioRender.h  VideoRender.cpp  VideoRender.h
medialibrary/src/main/cpp/MediaPlayer/source/render/android/: NativeWindowVideoRender.cpp  NativeWindowVideoRender.h  OpenSLAudioRender.cpp  OpenSLAudioRender.h
medialibrary/src/main/cpp/MediaPlayer/source/resample/: AudioResampler.cpp  AudioResampler.h
medialibrary/src/main/cpp/MediaPlayer/source/sync/: MediaClock.cpp  MediaSync.cpp  MediaSync.h
medialibrary/src/main/cpp/SoundTouch/: CMakeLists.txt  SoundTouchHelper.cpp  SoundTouchHelper.h
medialibrary/src/main/cpp/include/: AndroidLog.h  Condition.h  Errors.h  Mutex.h  Thread.h
medialibrary/src/main/res/layout/: activity_main.xml
medialibrary/src/main/res/values/: colors.xml  strings.xml
videoedit/: build.gradle
videoedit/src/main/: AndroidManifest.xml
videoedit/src/main/assets/: fragment_bitmap_overlay_es2.glsl
videoedit/src/main/assets/shaders/: fragment_contrast_es2.glsl
videoedit/src/main/res/layout/: activity_edit.xml  activity_transform.xml  contrast_options.xml  hsl_adjust_options.xml  periodic_vignette_options.xml  spinner_item.xml
videoedit/src/main/res/values/: strings.xml  themes.xml
(+212 files in other folders)
